tests/invalid/simple/Subtype_CompileFail_4.whiley
define scf4set as {int} where |$| > 0

void System::main([string] args):
    scf4set x = {}
    
